--- a/package.json
+++ b/package.json
@@ -15,13 +15,11 @@
     "karma-html2js-preprocessor": "~0.1.0",
     "karma-phantomjs-launcher": "~0.1.1",
     "karma-mocha": "~0.1.1",
-    "karma-chai": "0.0.2",
-    "karma-sinon": "~1.0.0",
-    "karma-sinon-chai": "~0.1.4",
     "grunt": "~0.4.2",
     "grunt-contrib-jshint": "~0.7.2",
     "grunt-contrib-connect": "~0.5.0",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-karma": "~0.6.2"
+    "grunt-karma": "~0.6.2",
+    "karma-chai-sinon": "git://github.com/tubalmartin/karma-chai-sinon.git"
   }
 }
